--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "graph-theory-ford-fulkerson",
+  "name": "algorithms-coursework",
   "version": "1.0.0",
-  "description": "Ford-Fulkerson Algorithm for Maximum Flow Problem",
-  "main": "index.js",
+  "description": "2K19 individual Algorithm coursework",
+  "main": "src/javaScript/index.js",
   "scripts": {
-    "test": "node test/*.js"
+    "test": "node test/index.js",
+    "start": "node src/javaScript/example/example.js"
   },
   "repository": {
     "type": "git",
@@ -14,12 +15,12 @@
     "graph-theory",
     "ford-fulkerson"
   ],
-  "author": "Prabod Rathnayaka <prabod@rathnayaka.me>",
+  "author": "Yohan Avishke",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/prabod/Graph-Theory-Ford-Fulkerson/issues"
+    "url": "https://github.com/YohanAvishke/Algorithms-coursework/issues"
   },
-  "homepage": "https://github.com/prabod/Graph-Theory-Ford-Fulkerson/",
+  "homepage": "https://github.com/YohanAvishke/Algorithms-coursework",
   "devDependencies": {
     "tape": "^4.4.0"
   },
