--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+#intellij
 .idea/
 Backend/Backend.iml
+#java class files
+out/
+#test java code snippets
+Backend/src/Ford_Fulkerson/Tests
 
 #node files
 # Logs
