--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,12 @@
   "name": "algorithms-coursework",
   "version": "1.0.0",
   "description": "2K19 individual Algorithm coursework",
-  "main": "src/javaScript/index.js",
+  "main": "src/Ford_Fulkerson/javaScript/index.js",
   "scripts": {
-    "test": "node test/index.js",
-    "start": "node src/javaScript/example/example.js"
+    "start": "http-server -p 8000",
+    "test": "grunt travis",
+    "build": "grunt build",
+    "prepublish": "grunt npmPrePublish"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,20 @@
   },
   "homepage": "https://github.com/YohanAvishke/Algorithms-coursework",
   "devDependencies": {
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "grunt-cli": "^0.1.13",
+    "grunt": "~0.4.5",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-closure-linter": "~0.1.4",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "load-grunt-tasks": "~0.6.0",
+    "grunt-sed": "~0.1.1",
+    "grunt-zip": "~0.15.0",
+    "http-server": "~0.9.0",
+    "grunt-grunt": "^0.2.2",
+    "uglify-js": "^2.4.15"
   },
   "dependencies": {}
 }
