fixed bugs with location

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,10 @@
   "name": "algorithms-coursework",
   "version": "1.0.0",
   "description": "2K19 individual Algorithm coursework",
-  "main": "src/javaScript/index.js",
+  "main": "src/Ford_Fulkerson/javaScript/index.js",
   "scripts": {
     "test": "node test/index.js",
-    "start": "node src/javaScript/example/example.js"
+    "start": "node src/Ford_Fulkerson/javaScript/example/example.js"
   },
   "repository": {
     "type": "git",
