--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "algorithms-coursework",
   "version": "1.0.0",
   "description": "2K19 individual Algorithm coursework",
-  "main": "Backend/src/Ford_Fulkerson/javaScript/index.js",
+  "main": "Backend/src/Ford_Fulkerson/JavaScript/Ford-Fulkerson.js",
   "scripts": {
     "test": "node test/index.js",
-    "start": "node src/Ford_Fulkerson/javaScript/example/example.js"
+    "start": "node src/Ford_Fulkerson/JavaScript/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,5 @@
   "bugs": {
     "url": "https://github.com/YohanAvishke/Algorithms-coursework/issues"
   },
-  "homepage": "https://github.com/YohanAvishke/Algorithms-coursework",
-  "devDependencies": {
-    "tape": "^4.4.0"
-  },
-  "dependencies": {}
+  "homepage": "https://github.com/YohanAvishke/Algorithms-coursework"
 }
